--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@
 
 $primary: #2DD2AB;
 $secondary: #84cc41;
+$bootstrap-icons-font-dir: "https://tinygames.rckt.com.br/fonts";
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../node_modules/bootstrap-icons/font/bootstrap-icons.scss";
